<resources>
    <string name="app_name">Medical HandBook</string>
    <string name="title_activity_main_menu">MainMenu</string>
    <string name="action_settings">Settings</string>
    <string name="about_head" translatable="false">  – серьезный симптом, поэтому лучше не относиться к этому явлению легкомысленно и пройти комплексное обследование у терапевта и невропатолога. Вероятно, понадобится проверить состояние шейного отдела позвоночника, а может быть, и сосудов головного мозга. Но если специалисты не найдут у вас никаких неврологических патологий, можно постараться справиться с бедой своими силами.</string>
    <string name="about_not_head" translatable="false">  При головной боли нежелательно курить, злоупотреблять таблетками, так как это не лучший выход из ситуации, употреблять алкогольные напитки, пить кофе.</string>
    <string name="ftype" translatable="false">\n
        Аллергия — это одна из основных причин головной боли, которая приводит как к закупорке пазух, так и к увеличению давления в голове. \n
        \n
    При аллергии человек часто может ощущать рассеянную боль по всей голове, а также зуд в глазах и слёзы. Эти симптомы знают те, кто страдает от сезонной аллергии. \n
        \n
    Как от этого избавиться? Врач назначает антигистаминные лекарства. \n
    \n
    Важно определить все провоцирующие факторы и устранить их. Если не удается справиться с проблемой самостоятельно, обязательно обращаются за консультацией к специалисту. \n
    \n
    Аллерголог направит на дополнительное обследование, в ходе которого пациент сдаст анализ крови и по его результату, доктор назначит специальное лечение. \n
    \n
    Дополнительно назначают диету и медицинские препараты, которые должен выписывать только врач. Самолечение вредит здоровью.</string>
    <string name="stype" translatable="false">\n
        Как правило, боль возникает в районе глаз, щёк, лба. Как избавиться от этих симптомов? Помочь могут самые обычные назальные средства или/и антибиотики. \n
        \n
    Если такая боль возникает слишком часто, убедитесь в том, что у вас нет искривления носовой перегородки — и обратитесь к врачу за помощью. \n
    \n
    Лечение синусита дома включает промывание носа и ингаляции. Для назального промывания понадобится нети-пот или небольшой пульверизатор. Промывать нос можно солевым раствором. Для приготовления солевого раствора нужно развести в теплой воде одну четвертую столовой ложки соли. Раствор поочередно заливается в ноздри и промывает полость. \n
        \n
        Следует помнить, что неграмотно проведенное промывание носа может навредить и дать осложнения, поэтому стоит сначала проконсультироваться с ЛОР-врачом.</string>
    <string name="ttype" translatable="false">\n
        Испытывая стресс, человек может страдать от головной боли в лобной части головы. Такая боль может возникать от переутомления, ощущения тревоги и расстройства, переизбытка эмоций. \n
        \n
    Чтобы избавиться от головной боли, необходимо научиться справляться со стрессом. Для этого попробуйте заняться дыхательными упражнениями и медитацией. Не лишним будет и контроль вашего сна. \n
    \n
    Снизить вероятность появления головной боли напряжения можно, освоив релаксационные упражнения (прогрессивная релаксация, дыхательная гимнастика, йога), \n
        разнообразив и увеличив физическую активность (занявшись фитнесом, плаванием, каким-нибудь спортом в любительском режиме). </string>
    <string name="fourth_type" translatable="false">\n
        Кластерная боль сама по себе очень сильная, сосредоточена в области глаз. Она часто сопровождается слезливостью и заложенностью носа. Как правило, она проходит в виде приступов. И кстати, кластерной головной болью страдают чаще женщины, чем мужчины. \n
        \n
    Врачи не могут точно назвать причину возникновения такой боли. Но есть информация, что это генетическая предрасположенность, которая может обостриться сигаретами и алкоголем. \n
        \n
    Такую боль нужно лечить только медикаментозным путём.</string>
    <string name="fifth_type" translatable="false">\n
        Люди, которые слишком часто употребляют кофе, могут ощущать головную боль, если не выпьют чашку напитка вовремя. Это и не удивительно, ведь кофеин — это своего рода наркотик. \n
        \n
    Головная боль имеет пульсирующий характер и возникает тогда, когда кровеносные сосуды расширяются. \n
        \n
    Как решить эту проблему? Не потреблять так много кофе. Просто ограничить дозировки или даже вовсе отказаться от него.</string>
    <string name="firsttype">1. Аллергическая боль</string>
    <string name="secondtype">2. Синусит</string>
    <string name="thirdtype">3. Тревожность</string>
    <string name="stomachVarietyOne">По месту проявления наиболее интенсивных ощущений, болезненность может быть:</string>
    <string name="stomachVarietiesFirst">- опоясывающая боль по всей области живота; \n
        - появляющаяся над лобком – женские проблемы с органами репродуктивной системы. Спазмы при этом могут быть неинтенсивными, но в некоторых случаях становятся режущими; \n
        - локализированной выше или ниже пупка – заболевания тонкой кишки, воспаление аппендикса или грыжа. Возникновения боли в области пупка в период беременности обычно обусловливается ростом плода; \n
        - распространяющейся на спину и пах – патологии органов мочевой системы; \n
        - боль в животе справа – указывает на проблемы с печенью, жёлчным пузырём; \n
        - возникающей с левой стороны – панкреатит или язвенная болезнь.</string>
    <string name="stomachVarietyTwo">Кроме этого, характер боли может также о многом рассказать:</string>
    <string name="stomachVarietiesSecond">- резкая – острые кишечные инфекции или интоксикации; \n
        - режущая – печёночные колики, язва, внематочная беременность; \n
        - тупая – образование камней в почках. Наряду с тошнотой, свидетельствует о ранних сроках беременности; \n
        - опоясывающая – онкологические новообразования, патологии почек, хроническое протекание заболеваний органов ЖКТ.</string>
    <string name="stomachSymptoms">Несмотря на то что боль в животе может быть вызвана широким разнообразием факторов, проявляться они будут примерно одинаково — отличаться будет лишь степень интенсивности сопутствующих признаков. Основными симптомами являются:</string>
    <string name="stomachSymptomsSecond">- повышение температуры тела – у взрослого человека будет наблюдаться лишь при некоторых заболеваниях, в основном острого течения, а у ребёнка при всех расстройствах; \n
        - приступы сильного головокружения и мигрени; запоры, сменяющиеся поносом и наоборот; \n
        - снижение или полное отсутствие аппетита; \n
        - изменение цвета кала и мочи; \n
        - распространение боли в поясницу, плечи, выше и ниже пупка; \n
        - тошнота и рвота (при некоторых заболеваниях с примесями крови); \n
        - возрастание объёмов живота; \n
        - частые позывы к испусканию мочи; \n
        - приобретение кожным покровом бледного оттенка; \n
        - общая слабость организма больного; \n
        - кислая отрыжка; \n
        - напряжение мышц живота; \n
        - учащённое сердцебиение; \n
        - неудобное положение тела, которое принимает больной для уменьшения интенсивности спазмов.</string>
    <string name="stomachSymptomsThird">\n
        Если у взрослого или ребёнка обнаружились один или несколько указанных выше симптомов, необходимо сразу же вызывать скорую помощь, потому что без своевременного врачебного вмешательства большинство заболеваний могут привести к осложнениям и даже к летальному исходу.\n
    \n
    Появление боли в животе при беременности не должно вызывать беспокойство, если она возникает редко, не причиняет дискомфорта и быстро проходит. Кроме этого, приступы тошноты и боль в животе — первые признаки того, что представительница женского пола собирается стать матерью. Но если боль резкая и долго не проходит, это может свидетельствовать об угрозе выкидыша. Симптомами месячных, в особенности если они появились у девочки впервые в жизни, могут быть – сильные головокружения, вплоть до потери сознания, затруднённое дыхание, опоясывающая боль, которая нередко отдаёт в спину, незначительное повышение температуры тела.</string>
    <string name="stomachRepairAbout">В случаях, когда боли в животе проявляются не очень интенсивно, человек может самостоятельно распознать возможный фактор возникновения этого ощущения. Для этого необходимо:</string>
    <string name="stomachRepair">- принять горизонтальное положение, лёжа на спине, и расслабиться; \n
        - постараться определить, где наиболее сильно проявляется боль. Это особенно важно сделать для постановки диагноза, потому что разная локализация, например, ниже или выше пупка, с правой или левой стороны, присуща определённым заболеваниям. Для этого необходимо осторожно прощупать пальцами всю область живота; \n
        - сделать попытку описать характер болезненности. Она может быть – резкой, острой, тупой, ноющей, режущей или опоясывающей; \n
        - определить, какими признаками сопровождаются спазмы – тошнотой, поносом, нередко сменяющимся запорами, возрастанием температуры, сильной слабостью и приступами головокружения. Отследить увеличение их интенсивности при движениях или кашле; \n
        - постараться вспомнить, из-за чего появились данные неприятные ощущения. Были ли это заболевания, которые протекали ранее, месячные, сильный стресс или физические нагрузки, приём пищи. Нередко боль провоцирует беременность на ранних сроках.</string>
    <string name="stomachRepairTwo">Данные мероприятия могут провести взрослые люди самостоятельно. Если проявилась боль у ребёнка, мероприятия проводят его родители. \n</string>
    <string name="stomachRepairThree">Если данные процедуры не сделал пациент самостоятельно, специалист проделывает те же самые действия в клинических условиях. Кроме этого, врачом назначаются дополнительные методики диагностики:</string>
    <string name="stomachRepairSecondList">- измерять частоту пульса, температуру тела и кровяное давление; \n
        - анализ мочи и крови для общего и биохимического изучения; \n
        - анализ кала для обнаружения паразитов или яиц глистов; \n
        - УЗИ органов малого таза, брюшной полости и почек; \n
        - рентгенография с контрастным веществом; \n
        - исследование при помощи эндоскопа, нередко с применением биопсии.</string>
    <string name="boneache">Существует много болезней суставов, а также и других системных заболеваний организма, которые вызывают суставные боли. Если вас беспокоят боли в суставах рук и ног одновременно – то такие проблемы обычно вызывают болезни из таблицы №1:</string>
    <string name="boneachetwo">Ряд болезней, которые часто поражают суставы – обычно поражают один-два сустава, и крайне редко вызывают системное поражение и боли суставов и рук, и ног одновременно. Они представлены в таблице №2:</string>
    <string name="boneachethree">Заболевания из таблицы №2 обычно вызывают поражение 1–2 суставов, крайне редко сразу многих сочленений и рук, и ног. Если вас беспокоят боли одновременно в нескольких крупных и мелких сочленениях конечностей, причины уже другие – чаще это инфекционное заболевание или болезни системного характера из таблицы №1. \n
        \n
        Некоторые болезни, которые поражают сразу суставы и рук, и ног, представляют серьезную опасность. Например, итогом аутоиммунного заболевания ревматоидный артрит может быть даже смерть пациента от дыхательной, сердечной или почечной недостаточности. Такие патологии, как инфекционный или реактивный артрит – менее опасны. \n
        \n
        Лечение каждого конкретного недуга индивидуально.</string>
    <string name="boneachefour">Если у вас беспокоят боли в суставах ног и рук – не откладывая, обратитесь сначала к терапевту, который, исходя из предположительной причины болей, направит к ревматологу, травматологу, артрологу или ортопеду.</string>
</resources>