<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorBack"
        android:fillViewport="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <ImageView
                android:id="@+id/imageView33"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                app:srcCompat="@drawable/boneache" />

            <TextView
                android:id="@+id/textView23"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:text="@string/boneache"
                android:textColor="@color/colorAccent"
                android:textSize="15dp"
                android:textStyle="bold|italic" />

            <ImageView
                android:id="@+id/imageView34"
                android:layout_width="match_parent"
                android:layout_height="203dp"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                app:srcCompat="@drawable/firstbonelist" />

            <TextView
                android:id="@+id/textView28"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:text="@string/boneachetwo"
                android:textColor="@color/colorAccent"
                android:textSize="15dp"
                android:textStyle="bold|italic" />

            <ImageView
                android:id="@+id/imageView35"
                android:layout_width="match_parent"
                android:layout_height="265dp"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                app:srcCompat="@drawable/secondbonelist" />

            <TextView
                android:id="@+id/textView29"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:text="@string/boneachethree"
                android:textColor="@color/colorAccent"
                android:textSize="20dp"
                android:textStyle="bold|italic" />

            <TextView
                android:id="@+id/textView30"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="10dp"
                android:text="@string/boneachefour"
                android:textColor="@color/colorAccent"
                android:textSize="20dp"
                android:textStyle="bold|italic" />

            <ImageButton
                android:id="@+id/imageButton3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="@color/colorBack"
                android:onClick="onClickBoneAcheReasons"
                app:srcCompat="@drawable/boneache_reasons" />
        </LinearLayout>
    </androidx.core.widget.NestedScrollView>
</LinearLayout>